--- a/index.html
+++ b/index.html
@@ -6,22 +6,25 @@
 	<meta charset="utf-8">
 	
 	<link href="./asset/lumx/lumx/dist/lumx.css" rel="stylesheet" type="text/css">
-	<link href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
+	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
+	<link href="./asset/css/main.css" rel="stylesheet">
+	<link href="./asset/lumx/lumx/dist/scss/settings/_defaults.scss">
+
 
 </head>
 <body>
 
 	<header>
 		<nav>
-		<div class="bgc-blue-900 tc-white" flex-container="row" flex-align="center center">
+		<div class="bgc-blue-grey-900 tc-white" flex-container="row" flex-align="center center">
 		<div flex-item="4">
 		<h1 class="fs-display-3 display-block">Mi Pagina</h1>
 		</div>
 		<div flex-item="1">
-				<a href="#">inicio</a>
+				<a href="#/">inicio</a>
 		</div>
 		<div flex-item="1">
-					<a href="#">Crear post</a>
+					<a href="#/posts/new">Crear post</a>
 		</div>			
 			
 		</div>	
@@ -31,6 +34,8 @@
 
 	</header>
 	<section >
+
+
 <div flex-container="row" flex-align="center">
 	
 <div ng-view flex-tem="9">
@@ -40,7 +45,7 @@
 
 </div>
 
-
+<div flex-container="row" flex-align="center">
 <div class="bgc-blue-grey-800 mt++ p++ pt0" flex-container="column" ng-controller="ctrlContacto">
 <div flex-container="row">
 <div flex-item>
@@ -81,7 +86,8 @@
 	 </div>	
 	
 	 </div>		
-	 	</section> 	
+	 	</section> 
+	</div> 		
 	<section>
 		<article><p>Lorem ipsum dolor sit amet adipisicing elit. Itaque praesentium odio optio molestias ab explicabo nemo, neque sapiente harum accusantium consequatur labore alias hic perspiciatis cumque ratione, nam error sunt!</p></article>	
 	</section>
@@ -92,18 +98,25 @@
 	</footer>
 
 	<script src="./asset/lumx/jquery/dist/jquery.min.js" type="text/javascript"></script>
+	<script scr="./asset/lumx/velocity/dist/velocity.min.js"></script>
+	<script src="./asset/lumx/moment/min/moment-with-locales.js"></script>
+
 	<script src="./asset/lumx/angular/angular.min.js" type="text/javascript"></script>
 	
 	<script src="./asset/components/angular-route/angular-route.min.js"></script>	
-
-	<script scr="./asset/lumx/velocity/dist/velocity.min.js"></script>
+	<script src="./asset/components/angular-resource/angular-resource.js"></script>
 	
-	<script src="./asset/lumx/moment/min/moment-with-locales.js"></script>
+	
 
- 
+	
 	 	 <script src="./asset/lumx/lumx/dist/lumx.js"></script>
+	 	
+	 	<script src="./asset/js/autocomplete-jquery-ui.js">
+	 	</script>
 
 	<script src="./asset/js/app_inicio.js"></script>
 	<script src="./asset/js/controllers.js"></script>
+		<script src="./asset/js/services.js"></script>
+ 
 </body>
 </html>
